# diabetesui

./: clf.pkl  dm_risk_dev.py  knowledge_base.txt  main.py  pyproject.toml
.streamlit/: config.toml
