[project]
name = "demoui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
]
